kubernetes/authelia/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia-ingress
  namespace: authelia
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - secretName: login.monke.science-tls
      hosts:
        - login.monke.science
  rules:
    - host: login.monke.science
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authelia-service
                port:
                  number: 80
